--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="inner">
           <div class="hero">
             <img alt="White running shoes against a dark background"
-                 src="https://images.unsplash.com/photo-1519741497674-611481863552?q=80&auto=format&fit=crop&w=1200" />
+                 src="https://runninglab.com/cdn/shop/files/668419ce7d061_1719933390.png?v=1741590293&width=1214" />
             <span class="tag">Limited</span>
           </div>
           <h2 class="title">Nimbus Running Shoes</h2>
